2011-03-07  Pat Haugen <pthaugen@us.ibm.com>

	Backport from mainline
	2011-03-07  Pat Haugen <pthaugen@us.ibm.com>

	PR target/47862
	* config/rs6000/rs6000.h (HARD_REGNO_CALLER_SAVE_MODE): Define.

2011-03-07  Mingjie Xing  <mingjie.xing@gmail.com>

	* doc/cfg.texi: Remove "See" before @ref.
	* doc/invoke.texi: Likewise.

2011-03-03  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (*avx_pmaddubsw128): Fix mode of VEC_SELECT RTX.
	(ssse3_pmaddubsw128): Ditto.
	(ssse3_pmaddubsw): Ditto.

2011-03-03  Denis Chertykov <chertykov@gmail.com>

	Backport from mainline
	2011-02-22  Georg-Johann Lay  <avr@gjlay.de>

	PR target/42240
	* config/avr/avr.c (avr_cannot_modify_jumps_p): New function.
	(TARGET_CANNOT_MODIFY_JUMPS_P): Define.

2011-03-03  Richard Guenther  <rguenther@suse.de>

	* tree-vect-stmt.c (vectorizable_operation): Remove unused vars.

2011-03-02  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-02-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47615
	* tree-ssa-sccvn.h (run_scc_vn): Take a vn-walk mode argument.
	* tree-ssa-sccvn.c (default_vn_walk_kind): New global.
	(run_scc_vn): Initialize it.
	(visit_reference_op_load): Use it.
	* tree-ssa-pre.c (execute_pre): Use VN_WALK if in PRE.

2011-03-01  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-02-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/47639
	* tree-vect-generic.c (expand_vector_operations_1): Update
	stmts here ...
	(expand_vector_operations): ... not here.  Cleanup EH info
	and the CFG if required.

2011-03-01  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2011-03-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47890
	* tree-vect-loop.c (get_initial_def_for_induction): Set
	related stmt properly.

	2010-12-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/46723
	* tree-vect-loop.c (get_initial_def_for_induction): Strip