@@ -1,0 +1,4 @@
+/* { dg-do run } */
+/* { dg-additional-sources "pr47278-2.c" } */
+
+int foo (void) { return 1; }
