@@ -1,0 +1,13 @@
+extern void abort (void);
+
+int __attribute__((weak,visibility("hidden"))) foo (void)
+{
+  return 0;
+}
+
+int main()
+{
+  if (foo() != 1)
+    abort ();
+  return 0;
+}
