@@ -3067,7 +3067,7 @@ tree_inlinable_function_p (tree fn)
   /* Don't auto-inline anything that might not be bound within
      this unit of translation.  */
   else if (!DECL_DECLARED_INLINE_P (fn)
-	   && DECL_REPLACEABLE_P (fn))
+	   && decl_replaceable_p (fn))
     inlinable = false;
 
   else if (!function_attribute_inlinable_p (fn))
